2004-09-18  Mark Kettenis  <kettenis@gnu.org>

	* config/pa/hpux1020.mh (MH_CFLAGS): Remove -D__HP_CURSES.
	* config/pa/hpux11.mh (MH_CFLAGS): Likewise.
	* config/pa/hpux11w.mh (MH_CFLAGS): Likewise.
	* configure.in: Improve checks for curses library by checking for
	mvwaddstr instead of initscr.  Drop HP curses in favour of
	standard curses on HP-UX.
	* configure: Regenerated.

2004-09-18  Paul N. Hilfinger  <hilfingr@otisco.mckusick.com>

	* ada-lang.c: (ada_main_name, ada_value_slice_ptr, ada_value_slice,
	ada_breakpoint_rewrite, ada_template_to_fixed_record_type_1): 
	Minor formatting changes.
	(empty_array): Slight rewrite for formatting.
	(emit_char,parse,ada_language_defn,build_ada_types,
	ada_is_exception_sym, _initialize_ada_language): Move 
	definitions around.
	(ada_dump_symtab): Remove unused definition.
	(ada_maybe_exception_partial_symbol): Remove unused definition.

2004-09-16  Andrew Cagney  <cagney@gnu.org>

	* inf-child.c: Include "gdb_string.h".
	(inf_child_core_file_to_sym_file): Delete.
	(inf_child_target): Set to_fetch_registers and to_store_registers.
	* inf-ptrace.c: Include "gdb_string.h".
	* Makefile.in: Update all dependencies.

	* Makefile.in (gnu-v3-abi.o): Add explict rule to avoid -Werror
	problem.

2004-09-14  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c (mips_insn32_frame_cache): Pass frame cache in
	call to heuristic_proc_desc. Remove code that became redundant
	as a consequence.
	(read_next_frame_reg): Remove special case for SP_REGNUM.
	(set_reg_offset): Fix small typo.
	(reset_saved_regs): New procedure.
	(mips32_heuristic_proc_desc): No longer compute a fake
	procedure descriptor. Compute the full frame cache instead.
	Some minor comment reformatting.

2004-09-14  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS: Add Michael Chastain as the backup gdb.threads
	maintainer.

	* thread-db.c (thread_db_new_objfile): Assume that there is a
	child process.

2004-09-13  Jim Blandy  <jimb@redhat.com>
